mool/tests/compile/fail/model_sql_enum_conflicting_type.stderr
error: column sql_enum cannot be combined with type
  --> tests/compile/fail/model_sql_enum_conflicting_type.rs:13:5
   |
13 |     #[column(sql_enum, type = "text")]
   |     ^
